--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "express": "^4.16.3",
     "http-proxy-middleware": "^0.19.0",
     "localtunnel": "^1.9.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.3.2",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "path-parser": "^4.2.0",
     "sendgrid": "^5.2.3",
     "stripe": "^6.12.1"
   }
